# k0

./: FEATURES.md  Makefile  README.md  SHORTCUTS.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/handlers/: cluster_handler.rs  crd_handler.rs  editing_handler.rs  gateway_handler.rs  helm_handler.rs  incident_handler.rs  minikube_handler.rs  mod.rs  newrelic_handler.rs  pod_handler.rs  resource_handler.rs
src-tauri/src/application/services/: config_db.rs  formatting.rs  mod.rs
src-tauri/src/domain/: errors.rs
src-tauri/src/domain/entities/: cluster.rs  common.rs  config.rs  gateway.rs  helm.rs  incident.rs  minikube.rs  mod.rs  networking.rs  newrelic.rs  pod.rs  workload.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/helm/: mod.rs
src-tauri/src/infrastructure/kubernetes/: client_manager.rs  cluster_repository.rs  config_repository.rs  editing_repository.rs  gateway_repository.rs  helpers.rs  incident_repository.rs  mod.rs  networking_repository.rs  pod_repository.rs  workload_repository.rs
src-tauri/src/infrastructure/minikube/: mod.rs
src-tauri/src/infrastructure/newrelic/: mod.rs
src-tauri/src/infrastructure/streams/: chat_streamer.rs  log_streamer.rs  mod.rs  shell_streamer.rs
src-tauri/src/infrastructure/watchers/: mod.rs  pod_watcher.rs
src-tauri/src/interfaces/: mod.rs  state.rs
src-tauri/src/interfaces/tauri_commands/: chat_commands.rs  crd_commands.rs  (+13 more)
(+123 files in other folders)
