[package]
name = "k0"
version = "0.1.0"
description = "k0 - Kubernetes IDE"
authors = ["Murzbul"]
edition = "2021"

[lib]
name = "k0_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.98", features = ["client", "config", "runtime"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
base64 = "0.22"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tauri-plugin-pty = "0.2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
